[tool.poetry]
name = "aws-stack-set-snapshot"
version = "0.1.0"
description = ""
authors = ["Iain Samuel McLean Elder <iain@isme.es>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.20.26"
boto-collator-client = "^0.1.1"
ratemate = "^0.1.0"
pyrate-limiter = "^2.6.0"
logdecorator = "^2.4"
mypy-boto3-cloudformation = "^1.25.4"
mypy = "^0.982"
boto3-stubs = "^1.25.4"

[tool.poetry.dev-dependencies]
ipython = "^7.30.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
